<resources>
    <string name="copyleft">©2012 www.androidesk.com</string>
    <string name="app_push">Androidesk Push</string>
    <string name="app_name">Androidesk</string>
    <string name="slogan">Make you happy every day</string>
    <string name="version">Version</string>
    <string name="aboutus">About us</string>
    <string name="weibo_title">Follow on</string>
    <string name="website_title">Official website:</string>
    <string name="email_title">Email:</string>
    <string name="email_title_msg">Please select Email</string>
    <string name="weibo_sina">Sina Weibo</string>
    <string name="weibo_qq">Tencent Weibo</string>
    <string name="website">www.adesk.com</string>
    <string name="email">support@androidesk.com</string>
    <string name="weibo_sina_website">http://m.weibo.com/androidesk</string>
    <string name="weibo_qq_website">http://t.qq.com/anzhuobizhi</string>
    <string name="androidesk_website">http://adesk.com/</string>
    <string name="email_website">support@androidesk.com></string>
    <string name="qq">2496857263</string>
    <string name="qq_group">211306315(Group)</string>
    <string name="market_title">Cooperative:</string>
    <string name="market_hiapk">安卓市场</string>
    <string name="market_tencent">myapp</string>
    <string name="market_hiapk_site">http://m.sc.hiapk.com/himarket?srcCode=80031&amp;clientType=81002</string>
    <string name="market_tencent_site">http://android.myapp.com/android/appdetail.jsp?appid=50801</string>
    <string name="about_desc">Androidesk,the NO.1 mobile phone beautification app. Androidesk provides massive,free,awesome,HD wallpapers and selected livewallpapers for you.</string>
    <string name="label_album">Local Album</string>
    <string name="label_wallpaper">Androidesk</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="warn">Tips</string>
    <string name="back">back</string>
    <string name="delete">delete</string>
    <string name="download">download</string>
    <string name="install">install</string>
    <string name="no_sdcard_found">memory card not found,maybe some functions are not available</string>
    <string name="out_of_memory">too large to load</string>
    <string name="sys_disable">system is not supported</string>
    <string name="alert_fetch_wallpaper">Fetching wallpaper，please wait</string>
    <string name="tip">Tip</string>
    <string name="set_success">set success</string>
    <string name="set_failed">set failed</string>
    <string name="folder">Folder</string>
    <string name="more_delete">Bulk delete</string>
    <string name="finish">Finish</string>
    <string name="total_select">Total</string>
    <string name="reloadUrl">refresh</string>
    <string name="quit">quit</string>
    <string name="alert_quit_text">Are you sure to quit?</string>
    <string name="alert_title_quit_androidesk">exit</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_explorer">Recommend</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_personal">Profile</string>
    <string name="navigation_manage">More</string>
    <string name="settings_title">more</string>
    <string name="settings_title_local">local</string>
    <string name="settings_title_functions">functions</string>
    <string name="settings_title_settings">settings</string>
    <string name="settings_title_others">others</string>
    <string name="settings_wallpaper">local wallpapers</string>
    <string name="settings_album">album</string>
    <string name="settings_live_wallpaper">live wallpaper</string>
    <string name="settings_wallpaperAutoChange">automatic wallpaper</string>
    <string name="settings_wallpaperQuality">quality of picture browsing</string>
    <string name="settings_wallpaperOneClick">one-click wallpaper</string>
    <string name="settings_downloadSetting">download settings</string>
    <string name="settings_screenSetting">screen crop settings</string>
    <string name="settings_reminderSetting">reminder settings</string>
    <string name="settings_moreSetting">more</string>
    <string name="settings_feedback">feedback</string>
    <string name="settings_tutorial">tutorial</string>
    <string name="settings_sanxing_setting">samsung setting</string>
    <string name="settings_rate">rate Androidesk</string>
    <string name="settings_versionCheck">version check</string>
    <string name="settings_help">help</string>
    <string name="settings_about">about</string>
    <string name="settings_guide">guide</string>
    <string name="settings_um_banner">app recommended</string>
    <string name="settings_quit">log out</string>
    <string name="settings2_wallpaper_tab1">Loading</string>
    <string name="settings2_wallpaper_tab2">used</string>
    <string name="settings3_wallpaper_set_button">set as wallpaper</string>
    <string name="settings3_wallpaper_set_screen_lock_button">set as screen lock wallpaper</string>
    <string name="settings3_wallpaper_setting_screen_lock_button">prepare to set as screen lock wallpaper</string>
    <string name="choose_operation">please choose operation</string>
    <string name="settings3_wallpaper_delete_button">delete</string>
    <string name="settings3_wallpaper_getting">loading,please wait</string>
    <string name="settings3_local_getting">loading first time may cost longer，please wait</string>
    <string name="settings3_local_changing">loading,please wait</string>
    <string name="settings3_local_set_wallpaper">set wallpaper</string>
    <string name="settings3_wallpaper_crop_button">crop wallpaper</string>
    <string name="settings3_tab_vertical_crop">vertical</string>
    <string name="settings3_tab_horizontal_crop">scroll</string>
    <string name="toast_for_vertical_screen">for vertial screen</string>
    <string name="toast_for_horizontal_screen">for scroll screen</string>
    <string name="alert_choose_images">choose images</string>
    <string name="settings2_wallpaper_local">local management</string>
    <string name="settings2_album_getting">loading,please wait</string>
    <string name="settings2_wallppaer_tip1">. automatic scanning your albums and photos</string>
    <string name="settings2_wallppaer_tip2">· set as wallpaper conveniently</string>
    <string name="settings2_wallppaer_tip3">. for privacy-preserving,it will not be uploaded.</string>
    <string name="settings2_wallpaper_manage_local">open</string>
    <string name="settings2_livepaper_tab_installed">installed</string>
    <string name="settings2_livepaper_tab_notinstalled">not installed</string>
    <string name="settings2_livepaper_tab_update">update</string>
    <string name="settings2_livepaper_tab_install">install</string>
    <string name="settings2_livepaper_tab_uninstall">uninstall</string>
    <string name="settings2_livepaper_tab_manage">manage</string>
    <string name="settings2_livepaper_tab_view">browse</string>
    <string name="settings2_livepaper_tab_use">use</string>
    <string name="settings2_livepaper_tab_counting">refeshing…</string>
    <string name="settings2_livepaper_tab_delete">delete</string>
    <string name="settings2_livepaper_tab_delete_title">notice</string>
    <string name="settings2_livepaper_tab_delete_text">Are you sure to delete?</string>
    <string name="settings2_livepaper_select_title">choose Live Wallpaper Picker</string>
    <string name="settings2_livepaper_sdk_msg">Version of the system is low(%1$s), do not support the dynamic wallpaper</string>
    <string name="livewallpaper_scanning">scanning,please waiting...</string>
    <string name="livewallpaper_scanning_failed">Scan error,please try again.</string>
    <string name="settings2_is_auto_change">automatic wallpaper</string>
    <string name="settings2_is_auto_change_summary_on">open</string>
    <string name="settings2_is_auto_change_summary_off">off</string>
    <string name="settings2_wallpaper_frequency_change">replacing frequency</string>
    <string name="settings2_wallpaper_frequency_change_tip">Current %1$s</string>
    <string name="settings2_wallpaper_frequency_change_title">select a frequency</string>
    <string name="settings2_nightMode">sleep mode</string>
    <string name="settings2_nightMode_tip">no automatic change from 02:00 to 06:00</string>
    <string name="alert_wallpaper_need_sync">no wallpaper in local to change</string>
    <string name="setting2_auto_faild_tip">Auto change failed?</string>
    <string name="setting2_auto_faild_msg">Auto change maybe effected by some apps,such as 360 mobile safe;Tencent mobile manager;DX toolbox;task manager of some launchers.Please reboot</string>
    <string name="setting2_auto_faild_tip0">1.If using sumsung default launcher,please check it</string>
    <string name="setting2_auto_faild_msg0">"Wallpaper can't roll with screen in Sumsung default launcher.You should crop it before using it."</string>
    <string name="setting2_auto_faild_tip1">"2.If using other launchers,don't check it."</string>
    <string name="setting2_auto_faild_msg1">Wallpaper can roll with screen in Go launcher,360 launcher,etc. If you crop wallpaper,may cause error.</string>
    <string name="samsung_roll_screent">Crop wallpaper</string>
    <string name="samsung_scrollable">open</string>
    <string name="samsung_unscrollable">close</string>
    <string name="samsung_cropt1">Wallpaper is not fit the screen?</string>
    <string name="samsung_cropt2">Click here</string>
    <string name="settings2_auto_change_custom">use import images</string>
    <string name="settings2_auto_change_op_import">import</string>
    <string name="settings2_auto_change_tip1">.2 images at least</string>
    <string name="settings2_auto_change_tip2">.Above the screen resolution (%1$s)</string>
    <string name="settings2_auto_change_tip3">.Automatically adapt to screen</string>
    <string name="settings2_auto_change_flag1">use imported images</string>
    <string name="settings2_auto_change_flag2">choose from albums</string>
    <string name="settings2_auto_change_flag3">choose images</string>
    <string name="settings2_auto_change_import">import</string>
    <string name="settings2_auto_change_dete">delete</string>
    <string name="settings2_auto_change_msg1">import succeed</string>
    <string name="settings2_auto_change_msg2">import failed</string>
    <string name="settings2_auto_change_msg3">no images</string>
    <string name="settings2_auto_change_msg4">Sure to delete?</string>
    <string name="settings2_auto_change_msg5">2 images at least</string>
    <string name="settings2_auto_change_msg6">delete</string>
    <string name="settings2_create_shortcut">create shortcut of one-click wallpaper</string>
    <string name="settings2_create_shortcut_tip">"create shortcut on phone's desktop"</string>
    <string name="settings2_create_shortcut_dialog">replacing shortcut</string>
    <string name="toast_wallpaper_one_click_icon_is_creating">creating</string>
    <string name="settings2_onekey_from">mode</string>
    <string name="settings2_onekey_from_title">select</string>
    <string name="settings2_create_photo_wallpaer_shortcut">create shortcut for photo wallpaper</string>
    <string name="settings2_create_photo_wallpaer_shortcut_tip">"create shortcut for photo wallpaper on phone's desktop"</string>
    <string name="settings2_photo_wallpaper_open">try right now</string>
    <string name="settings2_photo_wallpaper_open_tip">have a try right now</string>
    <string name="photo_wallpaer">photo wallpaper</string>
    <string name="widget_guide">Widget tutorial</string>
    <string name="preference_icon">preference_icon</string>
    <string name="preference_arrow">preference_arrow</string>
    <string name="push_setting_tile">Wireless Air-Push</string>
    <string name="share_to_others">Others</string>
</resources>