<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout style="@style/top_bar_layout">
        <ImageView android:id="@id/imgpushback" style="@style/top_bar_back" />
        <TextView android:text="@string/settings_about" style="@style/top_bar_title" />
    </FrameLayout>
    <View style="@style/shape_line" />
    <ScrollView android:background="#fff3f3f3" android:scrollbars="vertical" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/grey_background" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/egg" android:contentDescription="@string/app_name" />
            <TextView android:textSize="12.0dip" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/versionName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
            <TextView android:textSize="15.0dip" android:textColor="@color/black" android:padding="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/about_desc" android:lineSpacingExtra="3.0dip" />
            <LinearLayout style="@style/box_linearlayout">
                <LinearLayout style="@style/box_top_unclick">
                    <ImageView android:src="@drawable/home" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff838383" android:linksClickable="true" android:layout_width="wrap_content" android:layout_height="17.0dip" android:text="@string/website_title" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:id="@id/textWebsite" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="17.0dip" android:layout_marginLeft="5.0dip" android:text="@string/website" style="@style/box_text" />
                </LinearLayout>
                <View style="@style/shape_line" />
                <LinearLayout style="@style/box_medium_unclick">
                    <ImageView android:src="@drawable/weibo" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff838383" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weibo_title" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff125074" android:gravity="center" android:id="@id/textWeibosina" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/weibo_sina" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff125074" android:gravity="center" android:id="@id/textWeibotent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/weibo_qq" style="@style/box_text" />
                </LinearLayout>
                <View style="@style/shape_line" />
                <LinearLayout style="@style/box_medium_unclick">
                    <ImageView android:src="@drawable/email" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff838383" android:gravity="center" android:autoLink="email" android:linksClickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_title" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff125074" android:gravity="center" android:id="@id/textSupport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/email" style="@style/box_text" />
                </LinearLayout>
                <View style="@style/shape_line" />
                <LinearLayout style="@style/box_bottom_unclick">
                    <ImageView android:src="@drawable/qq" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff838383" android:gravity="center" android:linksClickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="QQ:" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:textColorLink="#ff125074" android:gravity="center" android:linksClickable="true" android:id="@id/textQQ" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qq" style="@style/box_text" />
                </LinearLayout>
                <View android:visibility="gone" style="@style/shape_line" />
                <LinearLayout style="@style/box_bottom_unclick">
                    <ImageView android:src="@drawable/wallpaper" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff838383" android:gravity="center" android:autoLink="all" android:linksClickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/market_title" style="@style/box_text" />
                    <TextView android:textSize="14.0dip" android:textColor="#ff125074" android:gravity="center" android:autoLink="all" android:id="@id/textMarket" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/market_tencent" style="@style/box_text" />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip">
                <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center" android:id="@id/guide" android:background="@drawable/select_button_live" android:visibility="gone" android:layout_width="150.0dip" android:layout_height="40.0dip" android:text="@string/settings_guide" android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>