<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/box_linearlayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/settings_wallpaper" style="@style/box_top">
        <ImageView android:src="@drawable/wallpaper" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_wallpaper" android:layout_weight="1.0" style="@style/box_text" />
        <LinearLayout android:id="@id/wallpaper_new" android:layout_width="40.0dip" android:layout_height="17.0dip" android:layout_marginRight="6.0dip" />
        <ImageView android:contentDescription="@string/preference_arrow" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_album" style="@style/box_medium">
        <ImageView android:src="@drawable/album" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_album" android:layout_weight="1.0" style="@style/box_text" />
        <LinearLayout android:id="@id/album_new" android:layout_width="40.0dip" android:layout_height="17.0dip" android:layout_marginRight="6.0dip" />
        <ImageView android:contentDescription="@string/preference_arrow" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_live_wallpaper" style="@style/box_bottom">
        <ImageView android:src="@drawable/live_wallpaper" android:contentDescription="@string/preference_icon" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_live_wallpaper" android:layout_weight="1.0" style="@style/box_text" />
        <LinearLayout android:id="@id/livepaper_new" android:layout_width="40.0dip" android:layout_height="17.0dip" android:layout_marginRight="6.0dip" />
        <ImageView android:contentDescription="@string/preference_arrow" style="@style/box_arrow" />
    </LinearLayout>
</LinearLayout>