<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/box_linearlayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/settings_feedback" style="@style/box_top">
        <ImageView android:src="@drawable/feedback" android:contentDescription="@string/app_name" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_feedback" android:layout_weight="1.0" style="@style/box_text" />
        <LinearLayout android:id="@id/notice_new" android:layout_width="40.0dip" android:layout_height="17.0dip" android:layout_marginRight="6.0dip" />
        <ImageView android:contentDescription="@string/app_name" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_help" style="@style/box_medium">
        <ImageView android:src="@drawable/help" android:contentDescription="@string/app_name" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_help" android:layout_weight="1.0" style="@style/box_text" />
        <ImageView android:contentDescription="@string/app_name" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_rate" style="@style/box_medium">
        <ImageView android:src="@drawable/rate" android:contentDescription="@string/app_name" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_rate" android:layout_weight="1.0" style="@style/box_text" />
        <ImageView android:visibility="invisible" android:contentDescription="@string/app_name" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_versionCheck" style="@style/box_medium">
        <ImageView android:src="@drawable/update" android:contentDescription="@string/app_name" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_versionCheck" android:layout_weight="1.0" style="@style/box_text" />
        <ImageView android:visibility="invisible" android:contentDescription="@string/app_name" style="@style/box_arrow" />
    </LinearLayout>
    <View style="@style/shape_line" />
    <LinearLayout android:id="@id/settings_about" style="@style/box_bottom">
        <ImageView android:src="@drawable/aboutus_androidesk" android:contentDescription="@string/app_name" style="@style/preference_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/settings_about" android:layout_weight="1.0" style="@style/box_text" />
        <ImageView android:contentDescription="@string/app_name" style="@style/box_arrow" />
    </LinearLayout>
</LinearLayout>