<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout style="@style/top_bar_layout">
            <TextView android:text="@string/settings_title" style="@style/top_bar_title" />
        </FrameLayout>
        <View style="@style/shape_line" />
        <ScrollView android:background="@color/grey_background" android:scrollbars="vertical" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/settings_title_local" style="@style/box_text_title" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <include layout="@layout/settings_local_frame" />
                </LinearLayout>
                <TextView android:text="@string/settings_title_functions" style="@style/box_text_title" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <include layout="@layout/settings_function_frame" />
                </LinearLayout>
                <TextView android:text="@string/settings_title_settings" style="@style/box_text_title" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <include layout="@layout/settings_settings_frame" />
                </LinearLayout>
                <TextView android:text="@string/settings_title_others" style="@style/box_text_title" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <include layout="@layout/settings_others_frame" />
                </LinearLayout>
                <RelativeLayout android:orientation="horizontal" android:id="@id/setting_quit" android:background="@drawable/select_button_live" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="15.0dip">
                    <TextView android:textSize="15.0dip" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_quit" android:layout_centerInParent="true" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>