<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout style="@style/top_bar_layout">
        <ImageView android:id="@id/imgpushback" style="@style/top_bar_back" />
        <TextView android:text="@string/photo_wallpaer" style="@style/top_bar_title" />
    </FrameLayout>
    <View android:background="#ffdcd8d4" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <ScrollView style="@style/box_scrollayout">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/settings2_open" android:background="@drawable/select_single_box_bg" android:layout_marginBottom="10.0dip" android:baselineAligned="false" style="@style/box_linearlayout2">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:text="@string/settings2_photo_wallpaper_open" android:singleLine="true" style="@style/box_text" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/onekey_from_tips" android:text="@string/settings2_photo_wallpaper_open_tip" style="@style/box_text_tip" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@id/settings2_oneClick" android:background="@drawable/select_single_box_bg" android:baselineAligned="false" style="@style/box_linearlayout2">
                <LinearLayout android:orientation="vertical" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:text="@string/settings2_create_photo_wallpaer_shortcut" android:singleLine="true" style="@style/box_text" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/auto_change_frequency_tip" android:text="@string/settings2_create_photo_wallpaer_shortcut_tip" style="@style/box_text_tip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>