<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:id="@id/share_to_wx_others" android:background="@drawable/select_single_box_bg" style="@style/box_linearlayout2">
        <ImageView android:src="@drawable/others" android:contentDescription="@string/preference_icon" style="@style/share_icon" />
        <TextView android:layout_width="0.0dip" android:text="@string/share_to_others" android:layout_weight="1.0" style="@style/box_text" />
        <LinearLayout android:id="@id/wallpaper_new" android:layout_width="40.0dip" android:layout_height="17.0dip" android:layout_marginRight="6.0dip" />
        <ImageView android:contentDescription="@string/preference_arrow" style="@style/share_arrow" />
    </LinearLayout>
</LinearLayout>